# sheets_and_friends

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml  pypi-publish.yaml  test.yaml
artifacts/: biome_label.txt  biome_label_and_subclasses.txt  biome_label_vs_subclasses.txt  biome_subclasses.txt  biome_subclasses_vs_label.txt  compare_enums.yaml  curated_soil_ebs_tree.txt  envo_labs.tsv  envo_sco.tsv  freestanding_classes.yaml  from_sheets2linkml.yaml  gapfilled_curated_soil_ebs_tree.txt  mixs6_packages_final_clean.tsv  mixs6_sheet_env_packages.txt  mixs6_yaml_env_package_classes.txt  mixs_subset.yaml  mixs_subset.yaml.bak  mixs_subset_with_classes.yaml  mixs_subset_with_classes_modified_generated.yaml  mndc_dh_generated.yaml  nmdc_dh.yaml  nmdc_dh_vs_mixs_enums.yaml  nmdc_submission_schema.json  nmdc_submission_schema.yaml  nmdc_submission_schema_generated.yaml  nmdc_submission_schema_vs_mixs_enums.yaml  nmdc_test_data_lowercased.tsv  nmdc_test_data_valid_lowercase_colnames.tsv  observed_env_packages.tsv  possible_additions.txt  selected_observed_soil_broad_scales.tsv  sheets-for-nmdc-submission-schema_MLS-modifications_long.tsv  slots_modified.yaml  soil_biosample.yaml  soil_broad_scales_annotated.tsv  soil_broad_scales_annotated_cosine.tsv  soil_broad_scales_to_annotate.txt  soil_emls_jgi_mg_new.yaml  soil_emls_jgi_mg_new_shuttled.yaml  soil_emls_jgi_mg_new_shuttled_modified.yaml  (+5 more)
artifacts/for_data_harmonizer_scripts/: ConfigureFieldSettings.js  linkml.js  main.js
artifacts/for_data_harmonizer_template/: export.js  reference_template.html
data/: nmdc_test_data.tsv  nmdc_test_data_valid.tsv
docs/: index.html  linkml.js
docs/assets/: index.ff56f416.css  nmdc_submission_schema.002a15a4.js  nmdc_submission_schema.14252c90.js  nmdc_submission_schema.1f819408.js  nmdc_submission_schema.349cd220.js  nmdc_submission_schema.629eefc4.js  nmdc_submission_schema.857afe46.js  nmdc_submission_schema.adad7c29.js  nmdc_submission_schema.b7ea9c0e.js  nmdc_submission_schema.dec3f196.js  nmdc_submission_schema.ec387502.js
docs/script/: main.js
docs/template/: menu.js
nmdc_dh/: menu.json  package-lock.json  package.json  vite.config.js
project/: nmdc_dh.py  soil_biosample.py
project/excel/: nmdc_dh.xlsx
project/graphql/: nmdc_dh.graphql  soil_biosample.graphql
project/java/: nmdc_dh.sql  soil_biosample.sql
project/jsonld/: nmdc_dh.context.jsonld  nmdc_dh.jsonld  soil_biosample.context.jsonld  soil_biosample.jsonld
project/jsonschema/: nmdc_dh.schema.json  soil_biosample.schema.json
project/prefixmap/: nmdc_dh.yaml  soil_biosample.yaml
project/protobuf/: nmdc_dh.proto  soil_biosample.proto
project/shex/: nmdc_dh.shex  soil_biosample.shex
project/sqlschema/: nmdc_dh.sql  soil_biosample.sql
sheets_and_friends/: add_annotation_distances.py  add_sect_ord_pairs.py  column_update.py  compare_enums.py  envs_from_schema.py  get_mixs_recommended_slots.py  get_reccomended_slots.py  mod_by_path.py  modifications_and_validation.py  mods_lw.py  mods_lw.tsv  reexhaust.py  regex_validators.py  restack.py  retabulate_ranges_etc.py  retabulate_ranges_etc.tsv  shuttle.py  ubergraph_biome_stuff.py
sql/: observed_env_packages.sql  selected_observed_soil_broad_scales.sql
tests/: test_modifications_and_validation.py
uniqueness_tests/: uniqueness_tests.makefile  uniqueness_tests_schema.yaml  uniqueness_tests_schema_generated.yaml
web/: menu.json  package-lock.json  package.json
(+32 files in other folders)
