[tool.poetry]
name = "sheets_and_friends"
version = "0.1.0"
description = "Create a LinkML model with as-is imported slots, imported but modified slots (via yq), or newly minted slots (via schemasheets)"
authors = ["Mark Andrew Miller <MAM@lbl.gov>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
schemasheets = "^0.1.7"
click_log = "*"
glom = "^22.1.0"
pygsheets = "^2.0.5"
pandasql = "^0.7.3"
hident = "^0.1.7"
dpath = "^2.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
do_shuttle = "sheets_and_friends.shuttle:do_shuttle"
mod_by_path = "sheets_and_friends.mod_by_path:mod_by_path"
linkml2dataharmonizer = "sheets_and_friends.converters.commands:linkml2dataharmonizer"
promote_to_select = "sheets_and_friends.converters.commands:promote_to_select"